Removed support for Virtual Threads.